<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etIdentificador"
        android:enabled="false"
        android:hint="@string/lbIdentificador"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spMatrizLeiteira"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"

        >
    </Spinner>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etQtdLitros"
        android:hint="@string/lbQtdLitros"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDt"
        android:hint="@string/lbDt"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etHr"
        android:hint="@string/lbHr"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/fab_margin"
        >
        <Button
            android:id="@+id/btSalvar"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/lbSalvar"
            android:drawableLeft="@drawable/ic_menu_send"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />
        <Button
            android:id="@+id/btCancelar"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/lbCancelar"
            android:drawableLeft="@drawable/ic_menu_send"
            android:layout_marginRight="20dp"
            />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lvOrdenha"
        >


    </ListView>






</LinearLayout>